results/SpecGenBench/4-shot/log-TwoSum-2023_11_28_02_22_23.txt
class TwoSum {
    //@ requires nums != null;
    //@ ensures (\exists int i; 0 <= i && i < \result.length; 0 <= \result[i] && \result[i] < nums.length);
    //@ ensures (\forall int i; 0 <= i && i < \result.length; (\forall int j; i+1 <= j && j < nums.length; nums[\result[i]] + nums[j] != target));
    //@ ensures (\forall int i; 0 <= i && i < nums.length; (\forall int j; i+1 <= j && j < nums.length; nums[i] + nums[j] != target) ==> \result.length == 0);
    public int[] twoSum(int[] nums, int target) {
        int n = nums.length;
        //@ ghost int i_counter;
        //@ set i_counter = 0;
        //@ maintaining 0 <= i && i <= n;
        //@ maintaining i_counter == \num_of int i; 0 <= i && i < i_counter; (\forall int j; i+1 <= j && j < nums.length; nums[\result[i]] + nums[j] != target);
        //@ decreases n - i;
        for (int i = 0; i < n; ++i) {
            //@ ghost int j_counter;
            //@ set j_counter = i + 1;
            //@ maintaining i+1 <= j && j <= n;
            //@ maintaining j_counter == \num_of int j; i+1 <= j && j < j_counter; nums[i] + nums[j] != target;
            //@ decreases n - j;
            for (int j = i + 1; j < n; ++j) {
                if (nums[i] + nums[j] == target) {
                    return new int[]{i, j};
                }
                //@ set j_counter = j_counter + 1;
            }
            //@ set i_counter = i_counter + 1;
        }
        return new int[0];
    }
}
/home/max/Documents/JMLGPT/tmp/TwoSum.java:11: error: variable i is already defined in method twoSum(int[],int)
        //@ maintaining i_counter == \num_of int i; 0 <= i && i < i_counter; (\forall int j; i+1 <= j && j < nums.length; nums[\result[i]] + nums[j] != target);
                                                 ^
/home/max/Documents/JMLGPT/tmp/TwoSum.java:11: error: A \result expression may not be in a loop_invariant clause
        //@ maintaining i_counter == \num_of int i; 0 <= i && i < i_counter; (\forall int j; i+1 <= j && j < nums.length; nums[\result[i]] + nums[j] != target);
                                                                                                                                ^
/home/max/Documents/JMLGPT/tmp/TwoSum.java:17: error: variable j is already defined in method twoSum(int[],int)
            //@ maintaining j_counter == \num_of int j; i+1 <= j && j < j_counter; nums[i] + nums[j] != target;
                                                     ^
3 errors

